Add banners for collect

--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## One-time mandates
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates" target="_self">🌟 UPI mandates overview ↗</a>
+<a href="/payments/umap/mandates" target="_self">
+  🌟 UPI mandates overview ↗
+</a>
 
 <br />
 
@@ -18,9 +20,9 @@ visible_in_sidebar: true
 
 A one time mandate a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:
 
--   IPO mandates that are executed only on allotment of shares
--   Transit systems that debit funds only if ticket is confirmed
--   Events platforms can use OTMs for RSVP before confirmations
+- IPO mandates that are executed only on allotment of shares
+- Transit systems that debit funds only if ticket is confirmed
+- Events platforms can use OTMs for RSVP before confirmations
 
 <hr class="primary" />
 
@@ -43,7 +45,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     from a customer using a one time mandate in intent flow
                     <br /> <br />
                     <hr class="primary" />
-                    <h6>Step 1 - create a one time mandate</h6>
+                    <h6>Step 1 - Create a one time mandate</h6>
                     <ol>
                         <li>
                             <b>Merchant</b> sends one time mandate details to{" "}
@@ -71,7 +73,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         </li>
                     </ol>
                     <hr class="tertiary" />
-                    <h6>Step 2 - send a pre debit notification</h6>
+                    <h6>Step 2 - Send a pre debit notification</h6>
                     <p>
                         <b>Merchant</b> triggers a pre debit notification via
                         UMAP <b>48 - 72 Hrs before</b> debit / execution to let
@@ -79,13 +81,12 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         debit.
                     </p>
                     <hr class="tertiary" />
-                    <h6>Step 3 - trigger mandate execution</h6>
+                    <h6>Step 3 - Trigger mandate execution</h6>
                     <ol>
                         <Callout type="tip">
                             Customer only has to provide authorization if amount
                             exceeds ₹15,000
                         </Callout>
-                        .
                         <li>
                             48 - 72 Hrs after the pre debit notification is
                             successful, <b>Merchant</b> triggers mandate
@@ -99,7 +100,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                         </li>
                     </ol>
                     <hr class="tertiary" />
-                    <h6>Step 4 - check payment status</h6>
+                    <h6>Step 4 - Check payment status</h6>
                     <p>
                         <b>Merchant</b> can use check payment status API to
                         check payment statuses associated to the mandate
@@ -122,6 +123,14 @@ The first step to collect a payment via a one time mandate is for the merchant t
             key: "tab2",
             label: "Collect based",
             content: (
+                <><Callout type="warning">
+  ⚠️{" "}
+  <strong>
+    Collect Flow is scheduled to be depreciated as per NPCI recommendation
+  </strong>
+</Callout>
+
+<br />
                 <Text>
                     These are the list of steps involved in collecting a payment
                     from a customer using a one time mandate in intent flow
@@ -187,15 +196,16 @@ The first step to collect a payment via a one time mandate is for the merchant t
                     These have been detailed in the <b>Mandate Operations</b> section
                     within UPI Mandates
                 </Text>
+                </>
             ),
         },
     ]}
 />
 
 <NextPage
-    info={{
-        description: "Create one time mandate.  ",
-        slug: "/payments/umap/mandates/otm/create",
-        title: "Create One Time Mandate",
-    }}
+  info={{
+    description: "Create one time mandate.  ",
+    slug: "/payments/umap/mandates/otm/create",
+    title: "Create One Time Mandate",
+  }}
 />
