--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## Recurring mandates
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates" target="_self">🌟 UPI mandates overview ↗</a>
+<a href="/payments/umap/mandates" target="_self">
+  🌟 UPI mandates overview ↗
+</a>
 
 <br />
 
@@ -22,9 +24,9 @@ A recurring mandate is a mandate that that can be executed / debited multiple ti
 
 Recurring mandates help merchants seamless collect money multiple times with a single setup.
 
--   Create subscriptions for your streaming services & SAAS businesses
--   Automate memberships to your physical venues with automatic payments
--   Power daily savings/investment related features for your customers
+- Create subscriptions for your streaming services & SAAS businesses
+- Automate memberships to your physical venues with automatic payments
+- Power daily savings/investment related features for your customers
 
 <hr class="primary" />
 
@@ -52,8 +54,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                             <b>Merchant</b> sends recurring mandate details to{" "}
                             <b>UMAP</b> and receives a unique recurring mandate
                             creation intent link / qr to send to their{" "}
-                            <b>Customer</b>: `TODO: Redirect to intent based
-                            recurring mandate creation`
+                            <b>Customer</b>
                         </li>
                         <li>
                             <b>Customer</b> clicks recurring mandate creation
@@ -135,23 +136,28 @@ The first step to collect a payment via a recurring mandate is for the **merchan
             key: "tab2",
             label: "Collect based",
             content: (
+                <>
+                <Callout type="warning">
+  ⚠️{" "}
+  <strong>
+    Collect Flow is scheduled to be depreciated as per NPCI recommendation
+  </strong>
+</Callout>
+
+<br />
                 <Text>
                     Here is a typical list of steps involved in collecting a
                     payment from a customer via a collect based recurring
-                    mandate. Let’s use the example of `TODO: mention recurring
-                    mandate use case`. In this scenario, the lender (`TODO:
-                    replace 'lender' based on use case mentioned`) is the
-                    Merchant partner that has integrated with Setu.
+                    mandate.
                     <br /> <br />
                     <hr class="primary" />
-                    <h6>Step 1 - create a recurring mandate</h6>
+                    <h6>Step 1 - Create a recurring mandate</h6>
                     <ol>
                         <li>
                             <b>Merchant</b> sends recurring mandate details to{" "}
                             <b>UMAP</b> and the <b>Customer</b> receives a
                             recurring mandate creation notification on their UPI
-                            app: `TODO: Redirect to intent based recurring
-                            mandate creation`
+                            app
                         </li>
                         <li>
                             <b>Customer</b> clicks recurring mandate creation
@@ -166,7 +172,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         </li>
                     </ol>
                     <hr class="tertiary" />
-                    <h6>Step 2 - send a pre debit notification</h6>
+                    <h6>Step 2 - sendend a pre debit notification</h6>
                     <p>
                         In every recurrence cycle, <b>Merchant</b> triggers a
                         pre debit notification via <b>UMAP</b> 48 - 72 Hrs
@@ -181,7 +187,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         creating a recurring mandate.
                     </Callout>
                     <hr class="tertiary" />
-                    <h6>Step 3 - trigger mandate execution</h6>
+                    <h6>Step 3 - Trigger mandate execution</h6>
                     <ol>
                         <li>
                             48 - 72 Hrs after the pre debit notification is
@@ -203,7 +209,7 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                         creating a recurring mandate.
                     </Callout>
                     <hr class="tertiary" />
-                    <h6>Step 4 - check payment status</h6>
+                    <h6>Step 4 - Check payment status</h6>
                     <p>
                         <b>Merchant</b> can use check payment status API to
                         check payment statuses associated to the mandate
@@ -220,15 +226,16 @@ The first step to collect a payment via a recurring mandate is for the **merchan
                     These have been detailed in the <b>Mandate Operations</b> section
                     within UPI Mandates
                 </Text>
+                </>
             ),
         },
     ]}
 />
 
 <NextPage
-    info={{
-        description: "Create recurring mandate.  ",
-        slug: "/payments/umap/mandates/recurring/create",
-        title: "Create Recurring Mandate",
-    }}
+  info={{
+    description: "Create recurring mandate.  ",
+    slug: "/payments/umap/mandates/recurring/create",
+    title: "Create Recurring Mandate",
+  }}
 />
