--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -6,63 +6,81 @@ visible_in_sidebar: true
 ---
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
+  The merchant on-boarding APIs are only relevant for an aggregator. If you are
+  an individual merchant, you can proceed to the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    merchant quickstart
+  </a>{" "}
+  and either of our product pages{" "}
+  <a href="/payments/umap/payments" target="_self">
+    UPI payments
+  </a>{" "}
+  or{" "}
+  <a href="/payments/umap/mandates" target="_self">
+    UPI mandates
+  </a>
+  .
 </Callout>
 
-<br/>
+<br />
 
-## Check availability of VPA 
-This is an optional step. However, VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts. 
+## Check availability of VPA
+
+This is an optional step. However, VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts.
 
 Use the following API to check if it is already associated with another merchant or not.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/vpas/availability</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability" target="_blank">
-                    Check VPA availability ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/vpas/availability</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"
+          target="_blank"
+        >
+          Check VPA availability ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <hr class="primary" />
@@ -70,7 +88,7 @@ Use the following API to check if it is already associated with another merchant
 #### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "vpa": "deku@okokaxis"
 }`}
 </CodeBlockWithCopy>
@@ -78,10 +96,18 @@ Use the following API to check if it is already associated with another merchant
 #### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "available": true,
   "status": "available"
 }`}
 </CodeBlockWithCopy>
+
+<NextPage
+  info={{
+    description: "Create and assign VPA",
+    slug: "payments/umap/merchant-onboarding/create-vpa-api",
+    title: "Create and assign VPA",
+  }}
+/>
 
 <WasPageHelpful />
