--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -6,64 +6,83 @@ visible_in_sidebar: true
 ---
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
+  The merchant on-boarding APIs are only relevant for an aggregator. If you are
+  an individual merchant, you can proceed to the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    merchant quickstart
+  </a>{" "}
+  and either of our product pages{" "}
+  <a href="/payments/umap/payments" target="_self">
+    UPI payments
+  </a>{" "}
+  or{" "}
+  <a href="/payments/umap/mandates" target="_self">
+    UPI mandates
+  </a>
+  .
 </Callout>
 
-<br/>
+<br />
 
 ## Create merchant
 
 You can use the following API, to on-board merchants in UMAP, by providing required business details for merchants and your `aggregatorID`.
 
-<Callout type='tip'>For merchants acquired directly, <code>aggregatorID</code> can be accessed from Bridge.</Callout>
-<br/>
+<Callout type="tip">
+  For merchants acquired directly, <code>aggregatorID</code> can be accessed
+  from Bridge.
+</Callout>
+<br />
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/aggregators/merchants</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_self">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper" target="_self">
-                    Create merchant ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/aggregators/merchants</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_self">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"
+          target="_self"
+        >
+          Create merchant ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <hr class="primary" />
@@ -71,7 +90,7 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
 #### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "acceptDeemedTxns": true,
     "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
     "aggregatorAccountId": "328a928f-e277-4798-8e28-4b19a61a8a23",
@@ -105,7 +124,7 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
 #### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "acceptDeemedTxns": true,
   "addressProviderId": "1237800298651584417",
   "businessName": "deku",
@@ -141,5 +160,13 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
   "transactionStatus": "active"
 }`}
 </CodeBlockWithCopy>
+
+<NextPage
+  info={{
+    description: "Check availability of VPA",
+    slug: "payments/umap/merchant-onboarding/check-vpa-availability-api",
+    title: "Check VPA availability",
+  }}
+/>
 
 <WasPageHelpful />
