--- a/content/payments/umap/notifications/mandates/execute.mdx
+++ b/content/payments/umap/notifications/mandates/execute.mdx
@@ -10,14 +10,14 @@ visible_in_sidebar: true
 These are the available webhooks for merchants, when they execute mandates being registered through UMAP.
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate execution initiated",
-            content: (
-               <>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate execution initiated",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -29,7 +29,7 @@ These are the available webhooks for merchants, when they execute mandates being
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -39,17 +39,17 @@ These are the available webhooks for merchants, when they execute mandates being
    // Reason
    "reason": {}
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Mandate execution successful",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate execution successful",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -61,7 +61,7 @@ These are the available webhooks for merchants, when they execute mandates being
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -71,18 +71,21 @@ These are the available webhooks for merchants, when they execute mandates being
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "Mandate execution failed",
-            content: (
-               <>
-                     <Text>This is sent if mandate could not be created, due to some error or no authorisation from customer.</Text>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "Mandate execution failed",
+      content: (
+        <>
+          <Text>
+            This is sent if mandate could not be created, due to some error or
+            no authorisation from customer.
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -94,7 +97,7 @@ These are the available webhooks for merchants, when they execute mandates being
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -104,9 +107,9 @@ These are the available webhooks for merchants, when they execute mandates being
    // Reason
    "reason": {}
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
