--- a/content/payments/umap/notifications/mandates/notify.mdx
+++ b/content/payments/umap/notifications/mandates/notify.mdx
@@ -10,14 +10,14 @@ visible_in_sidebar: true
 These are the available webhooks for merchants, when they notify their customers before mandate execution.
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate pre-debit notification successful",
-            content: (
-               <>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate pre-debit notification successful",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -29,7 +29,7 @@ These are the available webhooks for merchants, when they notify their customers
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -39,17 +39,17 @@ These are the available webhooks for merchants, when they notify their customers
    // Reason
    "reason": {}
 }`}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Mandate pre-debit notification failed",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate pre-debit notification failed",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -61,7 +61,7 @@ These are the available webhooks for merchants, when they notify their customers
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -71,9 +71,9 @@ These are the available webhooks for merchants, when they notify their customers
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-               </>
-            ),
-         },
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
