--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -6,37 +6,47 @@ visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for pausing mandate (initiated by customer)
+
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/pause" target="_self">🌟 UPI mandate pause ↗</a>
+<a href="/payments/umap/mandates/generic/pause" target="_self">
+  🌟 UPI mandate pause ↗
+</a>
 
 <hr class="primary" />
 
 These are the available webhooks for merchants, when their customers attempt to pause their mandate (which can be a temporary action). Here is a quick view of how the status moves from `mandate.live` to `mandate.paused`—
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/mandate_pause/mandate_pause.svg"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate_pause/mandate_pause.svg"
+  alt="Bridge"
 />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate pause initiated",
-            content: (
-                <>
-                    <Text>
-                        The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>pause</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.pause.initiated</code></li>
-                            <li><code>status</code> will be <code>initiated</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate pause initiated",
+      content: (
+        <>
+          <Text>
+            The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>pause</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.pause.initiated</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>initiated</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -48,32 +58,39 @@ These are the available webhooks for merchants, when their customers attempt to 
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                   </CodeBlockWithCopy>
-                </>
-            ),
-        },
-        {
-            key: "2",
-            label: "Mandate pause successful",
-            content: (
-                <>
-                    <Text>
-                        The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>pause</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.pause.success</code></li>
-                            <li><code>status</code> will be <code>success</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate pause successful",
+      content: (
+        <>
+          <Text>
+            The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>pause</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.pause.success</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>success</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -85,32 +102,39 @@ These are the available webhooks for merchants, when their customers attempt to 
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-         },
-         {
-            key: "3",
-            label: "Mandate pause failed",
-            content: (
-                <>
-                    <Text>
-                        The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>pause</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.pause.failed</code></li>
-                            <li><code>status</code> will be <code>failed</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "Mandate pause failed",
+      content: (
+        <>
+          <Text>
+            The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>pause</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.pause.failed</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>failed</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -122,16 +146,16 @@ These are the available webhooks for merchants, when their customers attempt to 
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-        },
-    ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
