--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -6,37 +6,48 @@ visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for revoking mandate
+
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/revoke" target="_self">🌟 UPI mandate revoke ↗</a>
+<a href="/payments/umap/mandates/generic/revoke" target="_self">
+  🌟 UPI mandate revoke ↗
+</a>
 
 <hr class="primary" />
 
 These are the available webhooks for merchants, when revoking of mandate is done by either the customer or in rarer cases, the merchant. Here is a quick view of how the status moves from `mandate.live` to `mandate.revoked`—
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/mandate_unpause/mandate_unpause.svg"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate_unpause/mandate_unpause.svg"
+  alt="Bridge"
 />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate revoke initiated",
-            content: (
-                <>
-                    <Text>
-                        This notification will be sent only in case the revoke is initiated by the end user. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>revoke</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.revoke.initiated</code></li>
-                            <li><code>status</code> will be <code>initiated</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate revoke initiated",
+      content: (
+        <>
+          <Text>
+            This notification will be sent only in case the revoke is initiated
+            by the end user. The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>revoke</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.revoke.initiated</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>initiated</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -48,32 +59,39 @@ These are the available webhooks for merchants, when revoking of mandate is done
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                   </CodeBlockWithCopy>
-                </>
-            ),
-        },
-        {
-            key: "2",
-            label: "Mandate revoke successful",
-            content: (
-                <>
-                    <Text>
-                        The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>revoke</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.revoke.success</code></li>
-                            <li><code>status</code> will be <code>success</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate revoke successful",
+      content: (
+        <>
+          <Text>
+            The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>revoke</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.revoke.success</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>success</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -85,32 +103,39 @@ These are the available webhooks for merchants, when revoking of mandate is done
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-         },
-         {
-            key: "3",
-            label: "Mandate revoke failed",
-            content: (
-                <>
-                    <Text>
-                        The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>revoke</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.revoke.failed</code></li>
-                            <li><code>status</code> will be <code>failed</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "Mandate revoke failed",
+      content: (
+        <>
+          <Text>
+            The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>revoke</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.revoke.failed</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>failed</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -122,16 +147,16 @@ These are the available webhooks for merchants, when revoking of mandate is done
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-        },
-    ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
