--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -6,37 +6,49 @@ visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for updating mandate
+
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/update" target="_self">🌟 UPI mandate update ↗</a>
+<a href="/payments/umap/mandates/generic/update" target="_self">
+  🌟 UPI mandate update ↗
+</a>
 
 <hr class="primary" />
 
 Here is a quick view of how the status moves from `mandate.live` to `mandate.updated`—
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/mandate_update/mandate_update.svg"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate_update/mandate_update.svg"
+  alt="Bridge"
 />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate update initiated",
-            content: (
-                <>
-                    <Text>
-                        This notification will only be triggered in case the mandate is updated via intent link/QR. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>update</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.update.initiated</code></li>
-                            <li><code>status</code> will be <code>initiated</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate update initiated",
+      content: (
+        <>
+          <Text>
+            This notification will only be triggered in case the mandate is
+            updated via intent link/QR. The following param values indicate this
+            state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>update</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.update.initiated</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>initiated</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -48,7 +60,7 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -58,25 +70,33 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    // Reason
    "reason": {}
 }`}
-                   </CodeBlockWithCopy>
-                </>
-            ),
-        },
-        {
-            key: "2",
-            label: "Mandate update successful",
-            content: (
-                <>
-                    <Text>
-                        This webhook is triggered once UMAP knows the status of the mandate update process. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>update</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.update.success</code></li>
-                            <li><code>status</code> will be <code>success</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate update successful",
+      content: (
+        <>
+          <Text>
+            This webhook is triggered once UMAP knows the status of the mandate
+            update process. The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>update</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.update.success</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>success</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -88,7 +108,7 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -98,25 +118,33 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-         },
-         {
-            key: "3",
-            label: "Mandate update failed",
-            content: (
-                <>
-                    <Text>
-                        This webhook is triggered once UMAP knows the status of the mandate update process. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>update</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.update.failed</code></li>
-                            <li><code>status</code> will be <code>failed</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "Mandate update failed",
+      content: (
+        <>
+          <Text>
+            This webhook is triggered once UMAP knows the status of the mandate
+            update process. The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>update</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.update.failed</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>failed</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -128,7 +156,7 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
    // Mandate context
-   // "mandateType": "<type>", // TODO: what are the types?
+   // "mandateType": "<type>",
    // Mandate reference
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
@@ -138,9 +166,9 @@ Here is a quick view of how the status moves from `mandate.live` to `mandate.upd
    // Reason
    "reason": {}
 }`}
-                    </CodeBlockWithCopy>
-                </>
-            ),
-        },
-    ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
