--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -7,33 +7,54 @@ visible_in_sidebar: true
 
 ## Accept UPI payments with collect requests
 
+<Callout type="warning">
+  ⚠️{" "}
+  <strong>
+    Collect Flow is scheduled to be depreciated as per NPCI recommendation
+  </strong>
+</Callout>
+
+<br />
+
 The collect request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
 
 <hr class="primary" />
 
 ### Step 1 - Verify customer VPA (optional)
+
 In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
 
-<a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
-    <code>Verify customer VPA</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"
+  target="_blank"
+>
+  <code>Verify customer VPA</code> ↗
 </a>
 
 <hr class="primary" />
 
-### Step 2 - Create collect request 
+### Step 2 - Create collect request
+
 A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
-<a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
-    <code>Create collect request</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~collect/operation~collect#create"
+  target="_blank"
+>
+  <code>Create collect request</code> ↗
 </a>
 
 <hr class="primary" />
 
 ### Step 3 - Retrieve collect request
+
 After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
 
-<a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
-    <code>Fetch by ID</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"
+  target="_blank"
+>
+  <code>Fetch by ID</code> ↗
 </a>
 
 <hr class="primary" />
@@ -48,12 +69,11 @@ After the customer responds to the collect request, transaction details can be f
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Verify customer VPA",
-        slug: "/payments/umap/payments/collect-request/verify-customer-vpa-api",
-        title: "Start accepting UPI payments with Collect request",
-    }}
+  info={{
+    description: "Verify customer VPA",
+    slug: "/payments/umap/payments/collect-request/verify-customer-vpa-api",
+    title: "Start accepting UPI payments with Collect request",
+  }}
 />
 
 <WasPageHelpful />
