--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -10,27 +10,36 @@ visible_in_sidebar: true
 The first step to start utilising mandates is to create a mandate. Here is a quick view of how the status moves from `mandate.initiated` to `mandate.live` or `mandate.failed`—
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
+  alt="Bridge"
 />
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "Mandate creation initiated",
-            content: (
-               <>
-                  <Text>
-                        This indicates that a mandate creation request has been initiated by a customer or the merchant. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>create</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.create.initiated</code></li>
-                            <li><code>status</code> will be <code>initiated</code></li>
-                        </ul>
-                    </Text>
-                    <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "Mandate creation initiated",
+      content: (
+        <>
+          <Text>
+            This indicates that a mandate creation request has been initiated by
+            a customer or the merchant. The following param values indicate this
+            state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>create</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.create.initiated</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>initiated</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // -----------------
    // MERCHANT DETAILS
    // -----------------
@@ -48,31 +57,41 @@ The first step to start utilising mandates is to create a mandate. Here is a qui
    // -----------------
    // MANDATE CONTEXT
    // -----------------
-   "mandateType": "<type>", // TODO: what are the types?
+   "mandateType": "<type>",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    "reason": {} // sample mentioned above
 }`}
-                    </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "Mandate creation successful",
-            content: (
-               <>
-                     <Text>
-                        This indicates that the customer has received and authorised the mandate request, so the mandate is now active and will be used to collect payments from the customer accordingly to the rules of the mandate. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>create</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.create.success</code></li>
-                            <li><code>status</code> will be <code>success</code></li>
-                        </ul>
-                     </Text>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "Mandate creation successful",
+      content: (
+        <>
+          <Text>
+            This indicates that the customer has received and authorised the
+            mandate request, so the mandate is now active and will be used to
+            collect payments from the customer accordingly to the rules of the
+            mandate. The following param values indicate this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>create</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.create.success</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>success</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // -----------------
    // MERCHANT DETAILS
    // -----------------
@@ -90,31 +109,40 @@ The first step to start utilising mandates is to create a mandate. Here is a qui
    // -----------------
    // MANDATE CONTEXT
    // -----------------
-   "mandateType": "<type>", // TODO: what are the types?
+   "mandateType": "<type>",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    "reason": {} // sample mentioned above
 }`}
-                    </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "Mandate creation failed",
-            content: (
-               <>
-                     <Text>
-                        This is sent if mandate could not be created, due to some error or no authorisation from customer. The following param values indicate this state—
-                        <ul>
-                            <li><code>operation</code> will be <code>create</code></li>
-                            <li><code>eventType</code> will be <code>mandate_operation.create.success</code></li>
-                            <li><code>status</code> will be <code>success</code></li>
-                        </ul>
-                     </Text>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "Mandate creation failed",
+      content: (
+        <>
+          <Text>
+            This is sent if mandate could not be created, due to some error or
+            no authorisation from customer. The following param values indicate
+            this state—
+            <ul>
+              <li>
+                <code>operation</code> will be <code>create</code>
+              </li>
+              <li>
+                <code>eventType</code> will be{" "}
+                <code>mandate_operation.create.success</code>
+              </li>
+              <li>
+                <code>status</code> will be <code>success</code>
+              </li>
+            </ul>
+          </Text>
+          <CodeBlockWithCopy language="json">
+            {`{
    // -----------------
    // MERCHANT DETAILS
    // -----------------
@@ -132,15 +160,15 @@ The first step to start utilising mandates is to create a mandate. Here is a qui
    // -----------------
    // MANDATE CONTEXT
    // -----------------
-   "mandateType": "<type>", // TODO: what are the types?
+   "mandateType": "<type>",
    "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Unique ID for mandate operation
    "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp",
    "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
    "reason": {} // sample mentioned above
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
